@@ -1,4 +1,8 @@
-$Id: Changelog.txt,v 1.484 2022/01/23 00:14:39 nanard Exp $
+$Id: Changelog.txt,v 1.486 2022/02/19 19:15:24 nanard Exp $
+
+2022/02/19:
+  prefer non-reserved over reserved addresses in getifaddr()
+  pf: use external IP for NAT in double NAT setups
 
 VERSION 2.3.0 : released on 2022/01/23
 
@@ -1431,4 +1435,3 @@ VERSION 1.0 :
 2006/07/20:
   Command line arguments processing
   Added possibility to listen internally on several interfaces
-
